fix(style): aligned layout and styled components

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,18 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .container {
-  max-width: 1920px;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   margin: 0 15px;
-  padding: 0 15px;
+  padding: 0 1.25rem;
+}
+
+.container * {
+  margin: 8px  0;
+}
+
+
+.list .list-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
