--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,8 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  max-width: 1920px;
+  justify-content: center;
 }
 
 h1 {
@@ -44,7 +45,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #5d4238e8;
   cursor: pointer;
   transition: border-color 0.25s;
 }
