--- a/src/ui/styles/backdrop.css
+++ b/src/ui/styles/backdrop.css
@@ -1,5 +1,5 @@
 .backdrop {
-  background: #827e7e42;
+  background: #827e7e5c;
   z-index: 9999;
   width: 100%;
   height: 100%;
